force-app/main/default/objects/Revolution_Dashboard__c/Revolution_Dashboard__c.object-meta.xml
<CustomObject>
    <description>This object is used to create the dashboard of Revolution.</description>
    <label>Sales Dashboard</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Revolution Dashboard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>