force-app/main/default/objects/Revolution_Dashboard__c/fields/ATP1_Live_AGO__c.field-meta.xml
<CustomField>
    <fullName>ATP1_Live_AGO__c</fullName>
    <label>ATP1 Live (AGO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>