force-app/main/default/objects/Revolution_Dashboard__c/fields/ATP3_Live_IGO__c.field-meta.xml
<CustomField>
    <fullName>ATP3_Live_IGO__c</fullName>
    <label>ATP3 Live (IGO)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>