force-app/main/default/objects/Revolution_Dashboard__c/fields/BSP_GTL__c.field-meta.xml
<CustomField>
    <fullName>BSP_GTL__c</fullName>
    <label>BSP (GTL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>