force-app/main/default/objects/Revolution_Dashboard__c/fields/BSP_w_o_Tax_GTL__c.field-meta.xml
<CustomField>
    <fullName>BSP_w_o_Tax_GTL__c</fullName>
    <formula>BSP_GTL__c-Total_Tax_GTL__c</formula>
    <label>BSP w/o Tax(GTL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>