force-app/main/default/objects/Revolution_Dashboard__c/fields/BSP_w_o_Tax_IGO__c.field-meta.xml
<CustomField>
    <fullName>BSP_w_o_Tax_IGO__c</fullName>
    <formula>BSP_IGO__c- Total_Tax_IGO__c</formula>
    <label>BSP w/o Tax(IGO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>