force-app/main/default/objects/Revolution_Dashboard__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <formula>TIMENOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>