force-app/main/default/objects/Revolution_Dashboard__c/fields/MRC_Name__c.field-meta.xml
<CustomField>
    <fullName>MRC_Name__c</fullName>
    <externalId>true</externalId>
    <label>MRC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>