force-app/main/default/objects/Revolution_Dashboard__c/fields/OTM_MOGAS__c.field-meta.xml
<CustomField>
    <fullName>OTM_MOGAS__c</fullName>
    <label>OTM (MOGAS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>