force-app/main/default/objects/Revolution_Dashboard__c/fields/OTM_w_o_Tax_AGO__c.field-meta.xml
<CustomField>
    <fullName>OTM_w_o_Tax_AGO__c</fullName>
    <formula>OTM_AGO__c  -  Total_Tax_AGO__c</formula>
    <label>OTM w/o Tax(AGO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>