force-app/main/default/objects/Revolution_Dashboard__c/fields/OTM_w_o_Tax_IGO__c.field-meta.xml
<CustomField>
    <fullName>OTM_w_o_Tax_IGO__c</fullName>
    <formula>OTM_IGO__c  -  Total_Tax_IGO__c</formula>
    <label>OTM w/o Tax(IGO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>