force-app/main/default/objects/Revolution_Dashboard__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Name</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Revolution_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>