force-app/main/default/objects/Revolution_Dashboard__c/fields/Plant_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name_Text__c</fullName>
    <label>Plant Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>