force-app/main/default/objects/Revolution_Dashboard__c/fields/PSP_IGO__c.field-meta.xml
<CustomField>
    <fullName>PSP_IGO__c</fullName>
    <label>PSP (IGO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>