force-app/main/default/objects/Revolution_Dashboard__c/fields/PSP_MOGAS__c.field-meta.xml
<CustomField>
    <fullName>PSP_MOGAS__c</fullName>
    <label>PSP (MOGAS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>