force-app/main/default/objects/Revolution_Dashboard__c/fields/Total_Tax_MOGAS__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_MOGAS__c</fullName>
    <label>Total Tax MOGAS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>