force-app/main/default/objects/Revolution_Dashboard__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Plant_Name__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MOT__c</columns>
    <columns>BSP_AGO__c</columns>
    <columns>PSP_AGO__c</columns>
    <columns>OTM_AGO__c</columns>
    <columns>BSP_IGO__c</columns>
    <columns>UniqueKey__c</columns>
    <columns>PSP_IGO__c</columns>
    <columns>OTM_IGO__c</columns>
    <columns>BSP_MOGAS__c</columns>
    <columns>PSP_MOGAS__c</columns>
    <columns>OTM_MOGAS__c</columns>
    <columns>BSP_GTL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Revolution_Dashboard__c.Dashboard</value>
    </filters>
    <label>All</label>
</ListView>