force-app/main/default/objects/Revolution_Dashboard__c/listViews/All_SOM.listView-meta.xml
<ListView>
    <fullName>All_SOM</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Plant_Name__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>MOT__c</columns>
    <columns>BSP_AGO__c</columns>
    <columns>PSP_AGO__c</columns>
    <columns>OTM_AGO__c</columns>
    <columns>BSP_IGO__c</columns>
    <columns>UniqueKey__c</columns>
    <columns>PSP_IGO__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Revolution_Dashboard__c.Dashboard</value>
    </filters>
    <filters>
        <field>Sales_Channel__c</field>
        <operation>equals</operation>
        <value>AT01</value>
    </filters>
    <label>All (SOM)</label>
</ListView>