force-app/main/default/objects/Revolution_Dashboard__c/listViews/Snapshot.listView-meta.xml
<ListView>
    <fullName>Snapshot</fullName>
    <columns>NAME</columns>
    <columns>Plant_Name__c</columns>
    <columns>MOT__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>BSP_AGO__c</columns>
    <columns>PSP_AGO__c</columns>
    <columns>OTM_AGO__c</columns>
    <columns>BSP_IGO__c</columns>
    <columns>PSP_IGO__c</columns>
    <columns>OTM_IGO__c</columns>
    <columns>BSP_MOGAS__c</columns>
    <columns>PSP_MOGAS__c</columns>
    <columns>OTM_MOGAS__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Created_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Revolution_Dashboard__c.Snapshot</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Snapshot</label>
</ListView>